--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AirTrafficController.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="ConsoleViewer.cs" />
+    <Compile Include="DataCalculator.cs" />
+    <Compile Include="IConditionViewer.cs" />
     <Compile Include="ISeperationChecker.cs" />
     <Compile Include="ISeperationHandler.cs" />
     <Compile Include="ITrackReciever.cs" />
@@ -51,6 +53,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeperationChecker.cs" />
     <Compile Include="SeperationFileReader.cs" />
+    <Compile Include="TrackInfo.cs" />
+    <Compile Include="TrackReciever.cs" />
     <Compile Include="TransponderReciever.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
