--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -55,6 +55,7 @@
     <Compile Include="SeperationFileReader.cs" />
     <Compile Include="TrackInfo.cs" />
     <Compile Include="TrackReciever.cs" />
+    <Compile Include="TracksEventArgs.cs" />
     <Compile Include="TransponderReciever.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
