--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TransponderReceiver">
+      <HintPath>..\TransponderReceiver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AirTrafficController.cs" />
@@ -48,14 +51,12 @@
     <Compile Include="ISeperationChecker.cs" />
     <Compile Include="ISeperationHandler.cs" />
     <Compile Include="ITrackReciever.cs" />
-    <Compile Include="ITransponderReciever.cs" />
     <Compile Include="IDataCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeperationChecker.cs" />
     <Compile Include="SeperationFileReader.cs" />
     <Compile Include="TrackInfo.cs" />
     <Compile Include="TrackReciever.cs" />
-    <Compile Include="TransponderReciever.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
