--- a/ATM.Test.Unit/ATM.Test.Unit.csproj
+++ b/ATM.Test.Unit/ATM.Test.Unit.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DataCalculatorUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeperationCheckerUnitTests.cs" />
+    <Compile Include="SeperationFileWriterUnitTests.cs" />
     <Compile Include="TrackRecieverUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
